# trace-lens

./: .env.example  .gitignore  B-缁熶竴浜嬩欢妯″瀷涓嶴chema璁捐.md  CONTRIBUTING.md  Cargo.toml  Goal.md  LICENSE  README.md  Todo.md
configs/: edr-mapping.yaml  profiles.yaml  tracee-policy.yaml  watch_paths.yaml
db/: schema.sql
docs/: API.md  BEGINNER_GUIDE.md  PLAYBOOK.md  README.md
samples/: tracee-dns-events.ndjson  tracee-events.ndjson
scripts/: install-tracee.sh  install.sh  run-tracee-live.sh  validate-h1-01-curl-bash.sh  validate-h1-02-bash-i.sh  validate-h1-03-nc.sh  validate-h1-04-busybox-nc.sh  validate-h1-05-cron.sh  validate-h1-06-systemd.sh  validate-h2-02-unhide.sh  validate-nice-04-dns-entropy.sh
src/: app.rs  main.rs
src/api/: edr_ingest.rs  mod.rs  server.rs
src/cli/: mod.rs
src/collector/: canary.rs  mod.rs  ring0.rs  tracee.rs
src/connectors/: mod.rs  traits.rs
src/connectors/edr/: mod.rs  webhook.rs
src/engine/: incident.rs  ioc.rs  mod.rs  proc_tree.rs  trust.rs
src/model/: edr.rs  event.rs  incident.rs  mod.rs  process.rs  ring0.rs
src/storage/: sqlite.rs
systemd/: trace-lens.service  tracee.service
web/static/: README.md  app.css  dashboard.js  edr.js  file.js  incident.js  net.js  ring0.js  theme.js
web/templates/: README.md  edr.html  file.html  incident.html  index.html  net.html  ring0.html
